Prevent line breaks from header title, fix text vertical-align

--- a/web/static/css/style.scss
+++ b/web/static/css/style.scss
@@ -286,7 +286,7 @@ header {
 
 	.pageTitle {
 		font-weight: 100;
-		margin-top: 9px;
+		margin-top: 7px;
 		min-height: 24px;
 		font-size: 16px;
 		color: #eee;
@@ -297,15 +297,18 @@ header {
 
 		h1 {
 			vertical-align: middle;
-			display: inline-block;
+			padding-top: 4px;
 		}
 
 		a, div.switchable {
+			display: inline-block;
 			color: #fff;
 			@include transition-duration(200ms);
 			padding: 2px 6px;
 			@include border-radius(2px);
 			border: 1px solid transparent;
+			white-space: nowrap;
+			margin: -4px 0 4px 0;
 
 			&:hover {
 				color: #fff;
